; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_libfs.c_simple_write_end.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_libfs.c_simple_write_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.address_space = type { i32 }
%struct.page = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.inode* }
%struct.inode = type { i32 }

@PAGE_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @simple_write_end(%struct.file* %0, %struct.address_space* %1, i32 %2, i32 %3, i32 %4, %struct.page* %5, i8* %6) #0 {
  %8 = alloca %struct.file*, align 8
  %9 = alloca %struct.address_space*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.page*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca %struct.inode*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %8, align 8
  store %struct.address_space* %1, %struct.address_space** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store %struct.page* %5, %struct.page** %13, align 8
  store i8* %6, i8** %14, align 8
  %18 = load %struct.page*, %struct.page** %13, align 8
  %19 = getelementptr inbounds %struct.page, %struct.page* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load %struct.inode*, %struct.inode** %21, align 8
  store %struct.inode* %22, %struct.inode** %15, align 8
  %23 = load i32, i32* %10, align 4
  %24 = load i32, i32* %12, align 4
  %25 = add i32 %23, %24
  store i32 %25, i32* %16, align 4
  %26 = load %struct.page*, %struct.page** %13, align 8
  %27 = call i32 @PageUptodate(%struct.page* %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %49, label %29

29:                                               ; preds = %7
  %30 = load i32, i32* %12, align 4
  %31 = load i32, i32* %11, align 4
  %32 = icmp ult i32 %30, %31
  br i1 %32, label %33, label %46

33:                                               ; preds = %29
  %34 = load i32, i32* %10, align 4
  %35 = load i32, i32* @PAGE_SIZE, align 4
  %36 = sub nsw i32 %35, 1
  %37 = and i32 %34, %36
  store i32 %37, i32* %17, align 4
  %38 = load %struct.page*, %struct.page** %13, align 8
  %39 = load i32, i32* %17, align 4
  %40 = load i32, i32* %12, align 4
  %41 = add i32 %39, %40
  %42 = load i32, i32* %11, align 4
  %43 = load i32, i32* %12, align 4
  %44 = sub i32 %42, %43
  %45 = call i32 @zero_user(%struct.page* %38, i32 %41, i32 %44)
  br label %46

46:                                               ; preds = %33, %29
  %47 = load %struct.page*, %struct.page** %13, align 8
  %48 = call i32 @SetPageUptodate(%struct.page* %47)
  br label %49

49:                                               ; preds = %46, %7
  %50 = load i32, i32* %16, align 4
  %51 = load %struct.inode*, %struct.inode** %15, align 8
  %52 = getelementptr inbounds %struct.inode, %struct.inode* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 4
  %54 = icmp sgt i32 %50, %53
  br i1 %54, label %55, label %59

55:                                               ; preds = %49
  %56 = load %struct.inode*, %struct.inode** %15, align 8
  %57 = load i32, i32* %16, align 4
  %58 = call i32 @i_size_write(%struct.inode* %56, i32 %57)
  br label %59

59:                                               ; preds = %55, %49
  %60 = load %struct.page*, %struct.page** %13, align 8
  %61 = call i32 @set_page_dirty(%struct.page* %60)
  %62 = load %struct.page*, %struct.page** %13, align 8
  %63 = call i32 @unlock_page(%struct.page* %62)
  %64 = load %struct.page*, %struct.page** %13, align 8
  %65 = call i32 @put_page(%struct.page* %64)
  %66 = load i32, i32* %12, align 4
  ret i32 %66
}

declare dso_local i32 @PageUptodate(%struct.page*) #1

declare dso_local i32 @zero_user(%struct.page*, i32, i32) #1

declare dso_local i32 @SetPageUptodate(%struct.page*) #1

declare dso_local i32 @i_size_write(%struct.inode*, i32) #1

declare dso_local i32 @set_page_dirty(%struct.page*) #1

declare dso_local i32 @unlock_page(%struct.page*) #1

declare dso_local i32 @put_page(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
